fixed slider on tablet and mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -659,11 +659,12 @@ line, circle {
       width: 5vw;
     }
     .menu-container {
-      left: 55vw;
+      left: 50vw;
       width: 70vw;
     }
     .nav-links {
       margin: 20% 10%;
+      width: 60%;
     }
     .contact-us-button {
       width: 137px;
