--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -221,6 +221,7 @@
         .flex-container {
           height: 235px;
           .img-project {
+            width: 90%;
             margin: 0 5%;
           }
         }
